--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,11 @@ endif()
 option(STD_C "Use the standard C library" ON)
 option(STD_CPP "Use the standard C++ library" ON)
 option(CPPUTEST_FLAGS "Use the CFLAGS/CXXFLAGS/LDFLAGS set by CppUTest" ON)
+if(BORLAND)
+option(MEMORY_LEAK_DETECTION "Enable memory leak detection" OFF)
+else(BORLAND)
 option(MEMORY_LEAK_DETECTION "Enable memory leak detection" ON)
+endif(BORLAND)
 option(EXTENSIONS "Use the CppUTest extension library" ON)
 option(LONGLONG "Support long long" OFF)
 option(MAP_FILE "Enable the creation of a map file" OFF)
