--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,55 +16,6 @@ if (EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake")
     conan_basic_setup()
 endif()
 
-# Check for functions before setting a lot of stuff
-include(CheckFunctionExists)
-include(CheckSymbolExists)
-set (CMAKE_REQUIRED_INCLUDES "unistd.h")
-check_symbol_exists(fork "unistd.h" HAVE_FORK)
-if(HAVE_FORK)
-  add_definitions(-DCPPUTEST_HAVE_FORK)
-endif(HAVE_FORK)
-
-check_symbol_exists(waitpid "sys/wait.h" HAVE_WAITPID)
-if(HAVE_WAITPID)
-  add_definitions(-DCPPUTEST_HAVE_WAITPID)
-endif(HAVE_WAITPID)
-
-check_symbol_exists(gettimeofday "sys/time.h" HAVE_GETTIMEOFDAY)
-if(HAVE_GETTIMEOFDAY)
-  add_definitions(-DCPPUTEST_HAVE_GETTIMEOFDAY=1)
-endif(HAVE_GETTIMEOFDAY)
-
-check_symbol_exists(pthread_mutex_lock "pthread.h" HAVE_PTHREAD_MUTEX_LOCK)
-if(HAVE_PTHREAD_MUTEX_LOCK)
-  add_definitions(-DCPPUTEST_HAVE_PTHREAD_MUTEX_LOCK=1)
-endif(HAVE_PTHREAD_MUTEX_LOCK)
-
-if (NOT IAR)
-  check_function_exists(strdup HAVE_STRDUP)
-  if(HAVE_STRDUP)
-    add_definitions(-DCPPUTEST_HAVE_STRDUP=1)
-  endif(HAVE_STRDUP)
-endif(NOT IAR)
-
-if (MINGW)
-    # Apply workaround for MinGW timespec redefinition (pthread.h / time.h)
-    include(CheckStructHasMember)
-    check_struct_has_member("struct timespec" tv_sec time.h HAVE_STRUCT_TIMESPEC)
-    if (HAVE_STRUCT_TIMESPEC)
-        add_definitions(-D_TIMESPEC_DEFINED=1)
-    endif()
-
-    if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        # Apply workaround for static/shared libraries on MinGW C/C++ compiler
-        # Issue occurs with CMake >= 3.9.0, it doesn't filter out gcc,gcc_s,gcc_eh from
-        # the implicit library list anymore, so the C++ linker is getting passed the static
-        # gcc_eh library since that's what the C linker uses by default. Only solution appears
-        # to be to force static linkage.
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
-    endif()
-endif()
-
 option(STD_C "Use the standard C library" ON)
 option(STD_CPP "Use the standard C++ library" ON)
 option(CPPUTEST_FLAGS "Use the CFLAGS/CXXFLAGS/LDFLAGS set by CppUTest" ON)
@@ -126,6 +77,73 @@ enable_testing()
 
 add_subdirectory(src/CppUTest)
 
+# Check for functions before setting a lot of stuff
+include(CheckFunctionExists)
+include(CheckSymbolExists)
+set (CMAKE_REQUIRED_INCLUDES "unistd.h")
+check_symbol_exists(fork "unistd.h" HAVE_FORK)
+if(HAVE_FORK)
+  target_compile_definitions(${CppUTestLibName}
+    PUBLIC
+      CPPUTEST_HAVE_FORK
+  )
+endif(HAVE_FORK)
+
+check_symbol_exists(waitpid "sys/wait.h" HAVE_WAITPID)
+if(HAVE_WAITPID)
+  target_compile_definitions(${CppUTestLibName}
+    PUBLIC
+      CPPUTEST_HAVE_WAITPID
+  )
+endif(HAVE_WAITPID)
+
+check_symbol_exists(gettimeofday "sys/time.h" HAVE_GETTIMEOFDAY)
+if(HAVE_GETTIMEOFDAY)
+  target_compile_definitions(${CppUTestLibName}
+    PUBLIC
+      CPPUTEST_HAVE_GETTIMEOFDAY=1
+  )
+endif(HAVE_GETTIMEOFDAY)
+
+check_symbol_exists(pthread_mutex_lock "pthread.h" HAVE_PTHREAD_MUTEX_LOCK)
+if(HAVE_PTHREAD_MUTEX_LOCK)
+  target_compile_definitions(${CppUTestLibName}
+    PUBLIC
+      CPPUTEST_HAVE_PTHREAD_MUTEX_LOCK=1
+  )
+endif(HAVE_PTHREAD_MUTEX_LOCK)
+
+if (NOT IAR)
+  check_function_exists(strdup HAVE_STRDUP)
+  if(HAVE_STRDUP)
+    target_compile_definitions(${CppUTestLibName}
+      PUBLIC
+        CPPUTEST_HAVE_STRDUP=1
+    )
+  endif(HAVE_STRDUP)
+endif(NOT IAR)
+
+if (MINGW)
+    # Apply workaround for MinGW timespec redefinition (pthread.h / time.h)
+    include(CheckStructHasMember)
+    check_struct_has_member("struct timespec" tv_sec time.h HAVE_STRUCT_TIMESPEC)
+    if (HAVE_STRUCT_TIMESPEC)
+      target_compile_definitions(${CppUTestLibName}
+        PUBLIC
+          _TIMESPEC_DEFINED=1
+      )
+    endif()
+
+    if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+        # Apply workaround for static/shared libraries on MinGW C/C++ compiler
+        # Issue occurs with CMake >= 3.9.0, it doesn't filter out gcc,gcc_s,gcc_eh from
+        # the implicit library list anymore, so the C++ linker is getting passed the static
+        # gcc_eh library since that's what the C linker uses by default. Only solution appears
+        # to be to force static linkage.
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
+    endif()
+endif()
+
 configure_file (
     "${PROJECT_SOURCE_DIR}/config.h.cmake"
     "${PROJECT_BINARY_DIR}/generated/CppUTestGeneratedConfig.h"
@@ -134,7 +152,10 @@ target_include_directories(${CppUTestLibName}
     PUBLIC
         $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>
 )
-add_definitions(-DHAVE_CONFIG_H)
+target_compile_definitions(${CppUTestLibName}
+  PUBLIC
+    $<BUILD_INTERFACE:HAVE_CONFIG_H>
+)
 
 if (EXTENSIONS)
     add_subdirectory(src/CppUTestExt)
