Normalize `find_package` and `add_subdirectory` usage
Add `ALIAS` targets so that usage with `add_subdirectory` or
`FetchContent` is the same as with `find_package`.

--- a/src/CppUTest/CMakeLists.txt
+++ b/src/CppUTest/CMakeLists.txt
@@ -79,6 +79,9 @@ set_target_properties(${CppUTestLibName} PROPERTIES
 if (WIN32)
     target_link_libraries(${CppUTestLibName} winmm)
 endif (WIN32)
+
+add_library(CppUTest::${CppUTestLibName} ALIAS ${CppUTestLibName})
+
 install(TARGETS ${CppUTestLibName}
     EXPORT CppUTestTargets
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
