--- a/examples/AllTests/CMakeLists.txt
+++ b/examples/AllTests/CMakeLists.txt
@@ -8,11 +8,11 @@ add_executable(ExampleTests
     PrinterTest.cpp
 )
 
-target_include_directories(ExampleTests
-    PRIVATE
-        ../ApplicationLib
-)
-
 cpputest_normalize_test_output_location(ExampleTests)
-target_link_libraries(ExampleTests ApplicationLib ${CppUTestLibName} ${CppUTestExtLibName})
+target_link_libraries(ExampleTests
+    PRIVATE
+        ApplicationLib
+        CppUTest::${CppUTestLibName}
+        CppUTest::${CppUTestExtLibName}
+)
 cpputest_buildtime_discover_tests(ExampleTests)
