Detect fenv.h in CMake
Addresses #1571 (at least for CMake)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,9 @@ enable_testing()
 
 add_subdirectory(src/CppUTest)
 
+include(CheckIncludeFileCXX)
+check_include_file_cxx("fenv.h" CPPUTEST_HAVE_FENV)
+
 # Check for functions before setting a lot of stuff
 include(CheckFunctionExists)
 include(CheckSymbolExists)
