Disable memory leak detection for Borland and GccNoStdC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,13 @@ set_property(
       "VisualCpp"
 )
 
+include(CMakeDependentOption)
 option(STD_C "Use the standard C library" ON)
 option(STD_CPP "Use the standard C++ library" ON)
 option(CPPUTEST_FLAGS "Use the CFLAGS/CXXFLAGS/LDFLAGS set by CppUTest" ON)
-option(MEMORY_LEAK_DETECTION "Enable memory leak detection" ON)
+cmake_dependent_option(MEMORY_LEAK_DETECTION "Enable memory leak detection" ON
+  "NOT CPP_PLATFORM STREQUAL Borland;NOT CPP_PLATFORM STREQUAL GccNoStdC" OFF
+)
 option(EXTENSIONS "Use the CppUTest extension library" ON)
 option(LONGLONG "Support long long" OFF)
 option(MAP_FILE "Enable the creation of a map file" OFF)
@@ -64,7 +67,6 @@ option(WERROR "Compile with warnings as errors" OFF)
 
 option(TESTS "Compile and make tests for the code?" ON)
 option(TESTS_DETAILED "Run each test separately instead of grouped?" OFF)
-include(CMakeDependentOption)
 cmake_dependent_option(TESTS_BUILD_DISCOVER "Build time test discover" ON
     "NOT CPP_PLATFORM STREQUAL Iar" OFF
 )
