--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,10 +45,6 @@ cmake_dependent_option(HAS_NAN "Compiler has NaN value for float" ON "NOT BORLAN
 
 cmake_dependent_option(STDC_WANT_SECURE_LIB "Use MSVC safe functions" ON "MSVC" OFF)
 
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "What kind of build this is" FORCE)
-endif(NOT CMAKE_BUILD_TYPE)
-
 # Pkg-config file
 include(FindPkgConfig)
 set(CppUTest_PKGCONFIG_FILE cpputest.pc)
@@ -70,7 +66,9 @@ endif(LIBNAME_POSTFIX_BITSIZE)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CppUTestRootDirectory}/cmake/Modules)
 
-include("${CppUTestRootDirectory}/cmake/Modules/CppUTestConfigurationOptions.cmake")
+if(CPPUTEST_FLAGS)
+    include("${CppUTestRootDirectory}/cmake/Modules/CppUTestConfigurationOptions.cmake")
+endif()
 include(CTest)
 #include("${CppUTestRootDirectory}/cmake/Modules/CheckFunctionExists.cmake")
 include("${CppUTestRootDirectory}/cmake/Modules/CppUTestBuildTimeDiscoverTests.cmake")
@@ -105,21 +103,36 @@ if (MINGW)
           _TIMESPEC_DEFINED=1
       )
     endif()
-
-    if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        # Apply workaround for static/shared libraries on MinGW C/C++ compiler
-        # Issue occurs with CMake >= 3.9.0, it doesn't filter out gcc,gcc_s,gcc_eh from
-        # the implicit library list anymore, so the C++ linker is getting passed the static
-        # gcc_eh library since that's what the C linker uses by default. Only solution appears
-        # to be to force static linkage.
-        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static")
-    endif()
 endif()
 
 include(CheckTypeSize)
 check_type_size("long long" SIZEOF_LONGLONG)
 if(HAVE_SIZEOF_LONGLONG)
     set(CPPUTEST_HAVE_LONG_LONG_INT ON)
+endif()
+
+if(NOT STD_C)
+    set(CPPUTEST_STD_C_LIB_DISABLED ON)
+endif()
+
+if(NOT STD_CPP)
+    set(CPPUTEST_STD_CPP_LIB_DISABLED ON)
+endif()
+
+if(NOT MEMORY_LEAK_DETECTION)
+    set(CPPUTEST_MEM_LEAK_DETECTION_DISABLED ON)
+endif()
+
+if(LONGLONG)
+    set(CPPUTEST_USE_LONG_LONG ON)
+endif()
+
+if(NOT HAS_INF)
+    set(CPPUTEST_NO_INF ON)
+endif()
+
+if(NOT HAS_NAN)
+    set(CPPUTEST_NO_NAN ON)
 endif()
 
 configure_file (
