Disable LIBNAME manipulation when used as subproject
`LIBNAME_POSTFIX_BITSIZE` is only useful when installing CppUTest,
not when consuming it with `add_subdirectory` or `FetchContent`.
(I'm not convinced it's justified even then; different architectures
should install to different _locations_ not names).

`LIBNAME_POSTFIX_DEBUG` is only useful when developing CppUTest,
not when consuming it.

Providing these options only serves to confuse the interface when users
shouldn't have to care.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,8 +48,8 @@ option(EXAMPLES "Compile and make examples?" ${PROJECT_IS_TOP_LEVEL})
 
 option(VERBOSE_CONFIG "Print configuration to stdout during generation" ${PROJECT_IS_TOP_LEVEL})
 
-option(LIBNAME_POSTFIX_BITSIZE "Add architecture bitsize (32/64) to the library name?" OFF)
-option(LIBNAME_POSTFIX_DEBUG "Add indication of debug compilation to the library name?" OFF)
+cmake_dependent_option(LIBNAME_POSTFIX_BITSIZE "Add architecture bitsize (32/64) to the library name?" OFF "PROJECT_IS_TOP_LEVEL" OFF)
+cmake_dependent_option(LIBNAME_POSTFIX_DEBUG "Add indication of debug compilation to the library name?" OFF "PROJECT_IS_TOP_LEVEL" OFF)
 
 cmake_dependent_option(HAS_INF "Compiler has Inf value for float" ON "NOT BORLAND" OFF)
 cmake_dependent_option(HAS_NAN "Compiler has NaN value for float" ON "NOT BORLAND" OFF)
