--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ endif()
 include(CMakeDependentOption)
 option(STD_C "Use the standard C library" ON)
 option(STD_CPP "Use the standard C++ library" ON)
-option(CPPUTEST_FLAGS "Use the CFLAGS/CXXFLAGS/LDFLAGS set by CppUTest" ON)
+option(CPPUTEST_FLAGS "Use the CFLAGS/CXXFLAGS/LDFLAGS set by CppUTest" ${PROJECT_IS_TOP_LEVEL})
 cmake_dependent_option(MEMORY_LEAK_DETECTION "Enable memory leak detection" ${PROJECT_IS_TOP_LEVEL} "STD_C;NOT BORLAND;CPPUTEST_FLAGS" OFF)
 option(EXTENSIONS "Use the CppUTest extension library" ON)
 cmake_dependent_option(LONGLONG "Support long long" OFF "NOT BORLAND" OFF)
