--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -36,7 +36,7 @@ jobs:
           -S .
           -B cpputest_build
           -D CMAKE_BUILD_TYPE=Debug
-          -D C++11=ON
+          -D CMAKE_CXX_STANDARD=11
           -D COVERAGE=ON
           -D LONGLONG=ON
       - name: Build
