--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,10 @@ jobs:
     environment:
       BUILD: autotools
       CXX: clang
+      CPPUTEST_BUILD_DIR: ./cpputest_build
     steps:
       - checkout
-      - run: ./scripts/travis_ci_build.sh
+      - run:  mkdir -p $CPPUTEST_BUILD_DIR && cd $CPPUTEST_BUILD_DIR && ../scripts/travis_ci_build.sh
 
 workflows:
   basic-build-and-test:
