--- a/tests/CppUTest/CMakeLists.txt
+++ b/tests/CppUTest/CMakeLists.txt
@@ -54,7 +54,7 @@ endif ()
 
 add_executable(CppUTestTests ${CppUTestTests_src})
 cpputest_normalize_test_output_location(CppUTestTests)
-target_link_libraries(CppUTestTests ${CppUTestLibName} ${THREAD_LIB})
+target_link_libraries(CppUTestTests CppUTest ${THREAD_LIB})
 
 if (TESTS_BUILD_DISCOVER)
     cpputest_buildtime_discover_tests(CppUTestTests)
